아작스 사용해서 업데이트 삭제

--- a/foot/src/main/resources/templates/user/include/account.html
+++ b/foot/src/main/resources/templates/user/include/account.html
@@ -21,8 +21,14 @@
 								</li>
 								<li class="nav-item">
 									<a class="nav-link " aria-current="page" href="/FavoritesUserList">
-										<i class="feather-icon icon-shopping-bag me-2"></i>
+										<i class="bi bi-star-fill me-2"></i>
 										즐겨찾기
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link " aria-current="page" href="/ReviewUserList">
+										<i class="bi bi-pencil-square me-2"></i>
+										리뷰내역
 									</a>
 								</li>
 								<li class="nav-item">
