--- a/foot/src/main/resources/templates/user/pay/PayUserForm.html
+++ b/foot/src/main/resources/templates/user/pay/PayUserForm.html
@@ -222,7 +222,7 @@
 										<li class="list-group-item px-4 py-3">
 											<div class="row align-items-center">
 												<div class="col-2 col-md-4">
-													<img src="/user/template/assets/images/products/HIP 풋살그라운드.jpg"
+													<img th:src="@{${item.path}}"
 														alt="Ecommerce" class="img-fluid" />
 												</div>
 												<div class="col-6 col-md-6">
