--- a/foot/src/main/resources/templates/user/pay/PayUserForm.html
+++ b/foot/src/main/resources/templates/user/pay/PayUserForm.html
@@ -59,10 +59,10 @@
 														<div class="d-flex">
 															<div class="form-check">
 																<!-- checkbox -->
-																<input class="form-check-input" type="radio"
+																<input class="form-check-input" type="radio" checked 
 																	name="flexRadioDefault" id="paypal" />
 																<label class="form-check-label ms-2"
-																	for="paypal"></label>
+																	for="paypal" ></label>
 															</div>
 															<div>
 																<!-- title -->
@@ -72,128 +72,128 @@
 														</div>
 													</div>
 												</div>
-												<div class="card card-bordered shadow-none mb-2">
-													<!-- card body -->
-													<div class="card-body p-6">
-														<div class="d-flex">
-															<div class="form-check">
-																<!-- checkbox -->
-																<input class="form-check-input" type="radio"
-																	name="flexRadioDefault" id="paypal" />
-																<label class="form-check-label ms-2"
-																	for="paypal"></label>
-															</div>
-															<div>
-																<!-- title -->
-																<h5 class="mb-1 h6" ><img src="/user/template/assets/images/payment/payment_icon_yellow_medium.png" alt="" width="50"> 카카오페이</h5>
-																<p class="mb-0 small"></p>
-															</div>
-														</div>
-													</div>
-												</div>
-												<div class="card card-bordered shadow-none mb-2">
-													<!-- card body -->
-													<div class="card-body p-6">
-														<div class="d-flex">
-															<div class="form-check">
-																<!-- checkbox -->
-																<input class="form-check-input" type="radio"
-																	name="flexRadioDefault" id="paypal" />
-																<label class="form-check-label ms-2"
-																	for="paypal"></label>
-															</div>
-															<div>
-																<!-- title -->
-																<h5 class="mb-1 h6"><img src="/user/template/assets/images/payment/badge_npay.svg" alt="" width="50"> 네이버페이</h5>
-																<p class="mb-0 small"></p>
-															</div>
-														</div>
-													</div>
-												</div>
-												<div class="card card-bordered shadow-none mb-2">
-													<!-- card body -->
-													<div class="card-body p-6">
-														<div class="d-flex">
-															<div class="form-check">
-																<!-- checkbox -->
-																<input class="form-check-input" type="radio"
-																	name="flexRadioDefault" id="paypal" />
-																<label class="form-check-label ms-2"
-																	for="paypal"></label>
-															</div>
-															<div>
-																<!-- title -->
-																<h5 class="mb-1 h6"><img src="/user/template/assets/images/payment/image.png" alt="" width="50"> 페이코</h5>
-																<p class="mb-0 small"></p>
-															</div>
-														</div>
-													</div>
-												</div>
-												<!-- card -->
-												<div class="card card-bordered shadow-none mb-2">
-													<!-- card body -->
-													<div class="card-body p-6">
-														<div class="d-flex mb-4">
-															<div class="form-check">
-																<!-- input -->
-																<input class="form-check-input" type="radio"
-																	name="flexRadioDefault" id="creditdebitcard" />
-																<label class="form-check-label ms-2"
-																	for="creditdebitcard"></label>
-															</div>
-															<div>
-																<h5 class="mb-1 h6">신용 카드</h5>
-																<p class="mb-0 small"></p>
-															</div>
-														</div>
-														<div class="row g-2">
-															<div class="col-12">
-																<!-- input -->
-																<div class="mb-3">
-																	<label for="card-mask" class="form-label">카드번호
-																		</label>
-																	<input type="text" class="form-control"
-																		id="card-mask" placeholder="xxxx-xxxx-xxxx-xxxx"
-																		required />
-																</div>
-															</div>
-															<div class="col-md-6 col-12">
-																<!-- input -->
-																<div class="mb-3 mb-lg-0">
-																	<label class="form-label" for="nameoncard">카드 소유자 이름
-																		</label>
-																	<input type="text" class="form-control"
-																		placeholder="성명" id="nameoncard" />
-																</div>
-															</div>
-															<div class="col-md-3 col-12">
-																<!-- input -->
-																<div class="mb-3 mb-lg-0 position-relative">
-																	<label class="form-label" for="expirydate">만료일
-																		</label>
-																	<input type="text" class="form-control"
-																		id="expirydate" placeholder="MM/YY" />
-																</div>
-															</div>
-															<div class="col-md-3 col-12">
-																<!-- input -->
-																<div class="mb-3 mb-lg-0">
-																	<label for="digit-mask" class="form-label">
-																		CVV
-																		<i class="fe fe-help-circle ms-1"
-																			data-bs-toggle="tooltip"
-																			data-placement="top"
-																			title="A 3 - digit number, typically printed on the back of a card."></i>
-																	</label>
-																	<input type="password" class="form-control"
-																		name="digit-mask" id="digit-mask"
-																		placeholder="xxx" maxlength="3"
-																		inputmode="numeric" required />
-																</div>
-															</div>
-														</div>
-													</div>
-												</div>
+<!-- 												<div class="card card-bordered shadow-none mb-2"> -->
+<!-- 													card body -->
+<!-- 													<div class="card-body p-6"> -->
+<!-- 														<div class="d-flex"> -->
+<!-- 															<div class="form-check"> -->
+<!-- 																checkbox -->
+<!-- 																<input class="form-check-input" type="radio" -->
+<!-- 																	name="flexRadioDefault" id="paypal" /> -->
+<!-- 																<label class="form-check-label ms-2" -->
+<!-- 																	for="paypal"></label> -->
+<!-- 															</div> -->
+<!-- 															<div> -->
+<!-- 																title -->
+<!-- 																<h5 class="mb-1 h6" ><img src="/user/template/assets/images/payment/payment_icon_yellow_medium.png" alt="" width="50"> 카카오페이</h5> -->
+<!-- 																<p class="mb-0 small"></p> -->
+<!-- 															</div> -->
+<!-- 														</div> -->
+<!-- 													</div> -->
+<!-- 												</div> -->
+<!-- 												<div class="card card-bordered shadow-none mb-2"> -->
+<!-- 													card body -->
+<!-- 													<div class="card-body p-6"> -->
+<!-- 														<div class="d-flex"> -->
+<!-- 															<div class="form-check"> -->
+<!-- 																checkbox -->
+<!-- 																<input class="form-check-input" type="radio" -->
+<!-- 																	name="flexRadioDefault" id="paypal" /> -->
+<!-- 																<label class="form-check-label ms-2" -->
+<!-- 																	for="paypal"></label> -->
+<!-- 															</div> -->
+<!-- 															<div> -->
+<!-- 																title -->
+<!-- 																<h5 class="mb-1 h6"><img src="/user/template/assets/images/payment/badge_npay.svg" alt="" width="50"> 네이버페이</h5> -->
+<!-- 																<p class="mb-0 small"></p> -->
+<!-- 															</div> -->
+<!-- 														</div> -->
+<!-- 													</div> -->
+<!-- 												</div> -->
+<!-- 												<div class="card card-bordered shadow-none mb-2"> -->
+<!-- 													card body -->
+<!-- 													<div class="card-body p-6"> -->
+<!-- 														<div class="d-flex"> -->
+<!-- 															<div class="form-check"> -->
+<!-- 																checkbox -->
+<!-- 																<input class="form-check-input" type="radio" -->
+<!-- 																	name="flexRadioDefault" id="paypal" /> -->
+<!-- 																<label class="form-check-label ms-2" -->
+<!-- 																	for="paypal"></label> -->
+<!-- 															</div> -->
+<!-- 															<div> -->
+<!-- 																title -->
+<!-- 																<h5 class="mb-1 h6"><img src="/user/template/assets/images/payment/image.png" alt="" width="50"> 페이코</h5> -->
+<!-- 																<p class="mb-0 small"></p> -->
+<!-- 															</div> -->
+<!-- 														</div> -->
+<!-- 													</div> -->
+<!-- 												</div> -->
+<!-- 												card -->
+<!-- 												<div class="card card-bordered shadow-none mb-2"> -->
+<!-- 													card body -->
+<!-- 													<div class="card-body p-6"> -->
+<!-- 														<div class="d-flex mb-4"> -->
+<!-- 															<div class="form-check"> -->
+<!-- 																input -->
+<!-- 																<input class="form-check-input" type="radio" -->
+<!-- 																	name="flexRadioDefault" id="creditdebitcard" /> -->
+<!-- 																<label class="form-check-label ms-2" -->
+<!-- 																	for="creditdebitcard"></label> -->
+<!-- 															</div> -->
+<!-- 															<div> -->
+<!-- 																<h5 class="mb-1 h6">신용 카드</h5> -->
+<!-- 																<p class="mb-0 small"></p> -->
+<!-- 															</div> -->
+<!-- 														</div> -->
+<!-- 														<div class="row g-2"> -->
+<!-- 															<div class="col-12"> -->
+<!-- 																input -->
+<!-- 																<div class="mb-3"> -->
+<!-- 																	<label for="card-mask" class="form-label">카드번호 -->
+<!-- 																		</label> -->
+<!-- 																	<input type="text" class="form-control" -->
+<!-- 																		id="card-mask" placeholder="xxxx-xxxx-xxxx-xxxx" -->
+<!-- 																		required /> -->
+<!-- 																</div> -->
+<!-- 															</div> -->
+<!-- 															<div class="col-md-6 col-12"> -->
+<!-- 																input -->
+<!-- 																<div class="mb-3 mb-lg-0"> -->
+<!-- 																	<label class="form-label" for="nameoncard">카드 소유자 이름 -->
+<!-- 																		</label> -->
+<!-- 																	<input type="text" class="form-control" -->
+<!-- 																		placeholder="성명" id="nameoncard" /> -->
+<!-- 																</div> -->
+<!-- 															</div> -->
+<!-- 															<div class="col-md-3 col-12"> -->
+<!-- 																input -->
+<!-- 																<div class="mb-3 mb-lg-0 position-relative"> -->
+<!-- 																	<label class="form-label" for="expirydate">만료일 -->
+<!-- 																		</label> -->
+<!-- 																	<input type="text" class="form-control" -->
+<!-- 																		id="expirydate" placeholder="MM/YY" /> -->
+<!-- 																</div> -->
+<!-- 															</div> -->
+<!-- 															<div class="col-md-3 col-12"> -->
+<!-- 																input -->
+<!-- 																<div class="mb-3 mb-lg-0"> -->
+<!-- 																	<label for="digit-mask" class="form-label"> -->
+<!-- 																		CVV -->
+<!-- 																		<i class="fe fe-help-circle ms-1" -->
+<!-- 																			data-bs-toggle="tooltip" -->
+<!-- 																			data-placement="top" -->
+<!-- 																			title="A 3 - digit number, typically printed on the back of a card."></i> -->
+<!-- 																	</label> -->
+<!-- 																	<input type="password" class="form-control" -->
+<!-- 																		name="digit-mask" id="digit-mask" -->
+<!-- 																		placeholder="xxx" maxlength="3" -->
+<!-- 																		inputmode="numeric" required /> -->
+<!-- 																</div> -->
+<!-- 															</div> -->
+<!-- 														</div> -->
+<!-- 													</div> -->
+<!-- 												</div> -->
 												<!-- card -->
 												
 												
