--- a/foot/src/main/resources/templates/user/signin/SigninUser.html
+++ b/foot/src/main/resources/templates/user/signin/SigninUser.html
@@ -107,7 +107,7 @@
                 <!-- link -->
                 <div>
                   계정이 없나요?
-                  <a href="/SignupUserForm">회원가입</a>
+                  <a th:href="@{/SignupUserForm}">회원가입</a>
                 </div>
               </div>
             </form>
@@ -229,7 +229,7 @@
   <script src="/user/template/assets/js/vendors/password.js"></script>
   <script src="/user/template/assets/js/vendors/validation.js"></script>
 	<script src="/xdm/jquery/jquery-3.7.1.min.js"></script>
-	
+
 	
 	
 <script type="text/javascript">
