--- a/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
+++ b/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
@@ -621,7 +621,7 @@
 					                        </a>
 					                    </div>
 					                    <h2 class="fs-6">
-										    <a href="Detailed-page.html" class="text-inherit text-decoration-none futsal-name" th:text="${list.futsalName}"></a>
+										    <a href="#" class="text-inherit text-decoration-none futsal-name" th:text="${list.futsalName}"></a>
 										</h2>
 <!-- 							<div class="mb-4" > -->
    							
